--- a/styles.scss
+++ b/styles.scss
@@ -25,7 +25,11 @@ $mainFont: 'Open Sans', sans-serif;
 		background-color:$white;
 	}
 }*/
-
+.whiteText{
+    color:#f3f3f3 !important;
+    font-size:80%;
+    margin-top:20px;
+}
 .leftMenu{
 	.pullOutIcon{
 		transition:all 0.4s;
@@ -181,4 +185,54 @@ $mainFont: 'Open Sans', sans-serif;
 	h3{
 		color:$navy;
 	}
+}
+.accordionContainer {
+    display: block;
+    width: 100%;
+    position: relative;
+    margin-bottom:15px;
+    .accordionPanel {
+        > a {
+            display: block;
+            width: 100%;
+            background-color: #f3f3f3;
+            padding: 15px;
+            color: $navy;
+            text-decoration: none;
+
+            &:hover {
+                color: $blue;
+            }
+
+            i {
+                color: black;
+                position: relative;
+                float: right;
+                display: block;
+                font-size: 20px;
+                transition: all 0.25s;
+                -webkit-transition: all 0.25s;
+            }
+
+            &.activeAccordion {
+                i {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+
+        > .accordionContents {
+            padding: 15px;
+            border: 1px solid #f3f3f3;
+            border-top: none;
+            display:none;
+            h4{
+                font-size:115%;
+            }
+        }
+    }
+}
+.subTitle{
+    color:#666;
+    font-style:italic;
 }
