--- a/styles.scss
+++ b/styles.scss
@@ -30,128 +30,145 @@ $mainFont: 'Open Sans', sans-serif;
     font-size:80%;
     margin-top:20px;
 }
-.leftMenu{
-	.pullOutIcon{
-		transition:all 0.4s;
-	-webkit-transition:all 0.4s;
-		position:absolute;
-		left:calc(100% + 10px);
-		top:10px;
-		font-size:30px;
-		z-index:32;
-		> a{
-			color:$red;
-		}
+.leftMenu {
+    .pullOutIcon {
+        transition: all 0.4s;
+        -webkit-transition: all 0.4s;
+        position: absolute;
+        left: calc(100% + 10px);
+        top: 10px;
+        font-size: 30px;
+        z-index: 32;
 
-	}
-	@media(min-width:$breakpoint){
-		width:40%;
-		height:100%;
-		position:absolute;
-		top:0px;
-		left:0px;
-		background-color:$black;
-		transition:all 0.4s;
-		-webkit-transition:all 0.4s;
-		&.hiddenMenu{
-			left:-40%;
-			> .pullOutIcon{
-				transform:rotate(180deg);
-			}
-		}
-	}
-	@media(max-width:$breakpoint){
+        > a {
+            color: $red;
+        }
+    }
 
-		width:80%;
-		max-width:400px;
-		height:100%;
-		position:fixed;
-		top:0px;
-		z-index:30;
-		background-color:$black;
-		transition:all 0.4s;
-		-webkit-transition:all 0.4s;
-		left:-80%;
-		&.hiddenMenu{
-			left:0px;
-			> .pullOutIcon{
-				transform:rotate(0deg);
-			}
-		}
-		.pullOutIcon{
-			transform:rotate(180deg);
-		}
-	}
-	
-	
-	.menuContainer{
-		width:100%;
-		max-width:300px;
-		position:relative;
-		float:right;
-		text-align:right;
-		right:0px;
-		top:0px;
-		padding:20px;
-		h2{
-			color:white;
-			font-family:$accentFont;
-			padding-left:0px;
-			padding-right:0px;
-			span{
-				color:$blue;
-			}
-		}
-		.mainNav{
-			font-size:0px;
-			> a, .navDrop > a{
-				font-size:medium;
-				color:$white;
-				text-decoration:none;
-				display:block;
-				width:100%;
-				padding:15px;
-				transition:all 0.2s;
-				-webkit-transition:all 0.2s;
-				&:hover{
-					background-color:$darkblack;
-				}
-			}
-			.navDrop {
-				> a > .dropArrow{
-					float:left;
-					display:inline-block;
-					transition:0.2s;
-					-webkit-transition:0.2s;
-				}
-				.activeDrop{
-					background-color:$darkblack;
-					> .dropArrow{
-						transform:rotate(180deg);
-					}
-				}
+    @media(min-width:$breakpoint) {
+        width: 40%;
+        height: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        background-color: $black;
+        transition: all 0.4s;
+        -webkit-transition: all 0.4s;
 
-			}
-			.navDropBox{
-				font-size:medium;
-				color:white;
-				background-color:$darkblack;
-				display:none;
-				a{
-					transition:all 0.2s;
-					-webkit-transition:all 0.2s;
-					color:white;
-					text-decoration:none;
-					width:100%;
-					display:block;
-					padding:15px;
-					&:hover{
-						border-right:4px solid white;
-					}
-				}
-			}
-		}
-	}
+        &.hiddenMenu {
+            left: -40%;
+
+            > .pullOutIcon {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    @media(max-width:$breakpoint) {
+        width: 80%;
+        height: 100%;
+        position: fixed;
+        top: 0px;
+        z-index: 30;
+        background-color: $black;
+        transition: all 0.4s;
+        -webkit-transition: all 0.4s;
+        right: 100%;
+
+        &.hiddenMenu {
+            right: 20%;
+            > .pullOutIcon {
+                transform: rotate(0deg);
+            }
+        }
+
+        .pullOutIcon {
+            transform: rotate(180deg);
+        }
+    }
+
+
+    .menuContainer {
+        width: 100%;
+        max-width: 300px;
+        position: relative;
+        float: right;
+        text-align: right;
+        right: 0px;
+        top: 0px;
+        padding: 20px;
+        @media(max-width:$breakpoint){
+            overflow-y:scroll;
+            height:100%;
+        }
+        h2 {
+            color: white;
+            font-family: $accentFont;
+            padding-left: 0px;
+            padding-right: 0px;
+
+            span {
+                color: $blue;
+            }
+        }
+
+        .mainNav {
+            font-size: 0px;
+
+            > a, .navDrop > a {
+                font-size: medium;
+                color: $white;
+                text-decoration: none;
+                display: block;
+                width: 100%;
+                padding: 15px;
+                transition: all 0.2s;
+                -webkit-transition: all 0.2s;
+
+                &:hover {
+                    background-color: $darkblack;
+                }
+            }
+
+            .navDrop {
+                > a > .dropArrow {
+                    float: left;
+                    display: inline-block;
+                    transition: 0.2s;
+                    -webkit-transition: 0.2s;
+                }
+
+                .activeDrop {
+                    background-color: $darkblack;
+
+                    > .dropArrow {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+
+            .navDropBox {
+                font-size: medium;
+                color: white;
+                background-color: $darkblack;
+                display: none;
+
+                a {
+                    transition: all 0.2s;
+                    -webkit-transition: all 0.2s;
+                    color: white;
+                    text-decoration: none;
+                    width: 100%;
+                    display: block;
+                    padding: 15px;
+
+                    &:hover {
+                        border-right: 4px solid white;
+                    }
+                }
+            }
+        }
+    }
 }
 .contentBox{
 	height:100%;
